--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "vinxi start"
   },
   "dependencies": {
+    "@solid-primitives/date": "^2.0.23",
     "@solidjs/router": "^0.14.5",
     "@solidjs/start": "^1.0.6",
     "@unocss/reset": "^0.59.4",
