--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@solidjs/router": "^0.14.5",
     "@solidjs/start": "^1.0.6",
     "@unocss/reset": "^0.59.4",
+    "hono": "^4.6.2",
     "solid-js": "^1.8.22",
     "unocss": "^0.59.4",
     "vinxi": "^0.4.3",
